add Query, LocalUploadSourceCode etc. apis
