# internal/local/model/model.go
@@ -1,0 +1,4 @@
+package model
+
+type LocalUploadSourceCodeResponse struct {
+}
